base/monitoring/loki/networkpolicies/egress-loki.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-loki
  namespace: monitoring
spec:
  selector: app == 'loki'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == 'alertmanager'
        ports:
          - 9093
