base/monitoring/loki/networkpolicies/egress-promtail.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-promtail
  namespace: monitoring
spec:
  selector: app == 'promtail'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'loki'
        ports:
          - 3100
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443
